<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="comp3350.fairprice.presentation.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <Button
            android:id="@+id/button4"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:onClick="allItems"
            android:text="All Items"
            android:visibility="visible" />

        <SearchView
            android:id="@+id/searchItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:iconifiedByDefault="false"
            android:queryHint="Search Item">

        </SearchView>

        <TextView
            android:id="@+id/currentCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"

            android:layout_marginStart="30dp"
            android:layout_marginBottom="1dp"
            android:text="Category: "
            android:textSize="20dp" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp">

        <Button
            android:id="@+id/button"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="45dp"
            android:onClick="buttonNewPost"
            android:text="@string/new_post" />

        <ListView
            android:id="@+id/post_list"
            android:layout_width="match_parent"
            android:layout_height="540dp"
            tools:listitem="@layout/post_list_item" />

        <Button
            android:id="@+id/button17"
            android:layout_width="125dp"
            android:layout_height="wrap_content"

            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="45dp"
            android:onClick="goToHome"
            android:text="Home" />

        <Button
            android:id="@+id/button2"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="4dp"
            android:onClick="buttonCategories"
            android:text="@string/categories" />


        <Button
            android:id="@+id/button13"
            android:layout_width="125dp"
            android:layout_height="wrap_content"

            android:layout_alignBottom="@id/button"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="4dp"
            android:onClick="openProfile"
            android:text="Profile" />


    </RelativeLayout>

</RelativeLayout>